@@ -23,6 +23,7 @@ public class TestJettyHttpClient
     {
         jettyIoPool = new JettyIoPool("test-shared", new JettyIoPoolConfig());
         httpClient = new JettyHttpClient(new HttpClientConfig(), jettyIoPool, ImmutableList.<HttpRequestFilter>of(new TestingRequestFilter()));
+        stats = httpClient.getStats();
     }
 
     @Override
